[Sarthik]ADD: Forget password API, used nodemailer for sending email to the user
